<resources>
    <string name="app_name">Live stream</string>
    <string name="agora_app_id">2bad426e0e134905a4055604b641e07a</string>

    <string name="msg_progress_typical">Please wait…</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_a_sign_in_method">Choose a sign-in method.</string>
    <string name="sign_in_with_email">Sign in with email</string>
    <string name="sign_in_with_phone">Sign in with phone</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_benefits">Sign in to unlock more user benefits and controls.</string>
    <string name="or">-- or --</string>
    <string name="search_live_streams">Search live streams…</string>
    <string name="profile">Profile</string>
    <string name="filter_search">Filter search</string>
    <string name="no_live_streams_found_at_the_moment">No live streams found at the moment.</string>
    <string name="schedule">Schedule</string>
    <string name="go_live">Go live</string>
    <string name="edit_profile">Edit profile</string>
    <string name="create_profile">Create profile</string>
    <string name="log_out">Log out</string>
    <string name="view_scheduled_live_streams">Scheduled streams</string>
    <string name="navigate_back">Navigate back</string>
    <string name="change_profile_picture">Change profile picture</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_a_username">Enter a username</string>
    <string name="enter_your_phone_number_optional">Enter your phone number (optional)</string>
    <string name="enter_you_age">Enter you age</string>
    <string name="enter_bio_here">Enter your profile bio</string>
    <string name="select_gender">Select gender</string>
    <string name="save_profile">Save Profile</string>
    <string name="schedule_live_stream">Schedule live stream</string>
    <string name="start_live_stream">Start live stream</string>
    <string name="enter_live_stream_details">Live stream details</string>
    <string name="video_thumbnail">Video thumbnail</string>
    <string name="please_pick_a_thumbnail_for_your_live_stream">Please pick a thumbnail image for your live stream.</string>
    <string name="pick_an_image">Pick an Image</string>
    <string name="enter_title_for_your_live_stream">Enter title for your live stream</string>
    <string name="enter_description_for_you_live_stream">Enter a description for you live stream…</string>
    <string name="add_custom_tags_recommended">Add custom tags (recommended)</string>
    <string name="pick_a_start_time">Pick a start time</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="title">Title</string>
    <string name="schedule_time">Schedule time</string>
    <string name="enter_tags_separated_by_space">Enter tags separated by space…</string>
    <string name="live">Live</string>
    <string name="likes">Likes</string>
    <string name="error_typical">Something went wrong, please try again</string>
    <string name="error_no_internet">Please check your internet connection and try again</string>
    <string name="please_wait_while_we_re_building_your_profile">Please wait while we\'re building your profile…</string>
    <string name="live_on_s">Live on %s</string>
    <string name="switch_camera">Switch camera</string>
    <string name="mic">Mic</string>
    <string name="camera">Camera</string>
    <string name="like">Like</string>
    <string name="send">Send</string>
    <string name="send_message">Say something…</string>
    <string name="hide_chat">Hide chat</string>
    <string name="show_chat_window">Show chat window</string>
    <string name="enter_your_message">Enter your message…</string>
    <string name="no_messages_yet">No messages yet…</string>
    <string name="search_filters">Search Filters:</string>
    <string name="is_live">Is Live</string>
    <string name="is_popular">Is Popular</string>
    <string name="close">Close</string>
    <string name="end_live_stream">End live stream</string>
</resources>
