<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.ui.EditProfileActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="always">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llToolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:paddingVertical="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/btnNavigateUp"
                    style="@style/IconButtonTypical"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/navigate_back"
                    android:padding="5dp"
                    android:src="@drawable/ic_back_24"
                    app:tint="@color/bluey_grey" />

                <TextView
                    android:id="@+id/tvToolbarTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:textColor="@color/black_80"
                    android:textFontWeight="600"
                    android:textSize="24sp"
                    tools:text="@string/edit_profile" />
            </LinearLayout>

            <com.google.android.material.progressindicator.LinearProgressIndicator
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="invisible"
                app:layout_constraintTop_toBottomOf="@+id/llToolbar"
                tools:visibility="gone" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ivProfilePic"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_profile_placeholder"
                app:civ_border_color="?attr/colorPrimary"
                app:civ_border_width="3dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/llToolbar" />

            <ImageButton
                android:id="@+id/btnEditProfilePic"
                style="@style/IconButtonTypical"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:background="@drawable/bg_circle"
                android:backgroundTint="?attr/colorAccent"
                android:contentDescription="@string/change_profile_picture"
                android:padding="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_edit_24"
                android:translationX="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/ivProfilePic"
                app:layout_constraintEnd_toEndOf="@+id/ivProfilePic"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/ivProfilePic"
                app:layout_constraintStart_toStartOf="@+id/ivProfilePic"
                app:layout_constraintTop_toTopOf="@+id/ivProfilePic"
                app:layout_constraintVertical_bias="0.89"
                app:tint="@color/white" />

            <com.example.livestream.commons.ui.widgets.ExtendedEditText
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="name"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:drawablePadding="12dp"
                android:drawableTint="@color/bluey_grey"
                android:hint="@string/enter_your_name"
                android:inputType="textPersonName"
                android:maxLength="100"
                android:maxLines="1"
                android:minWidth="200dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black_90"
                android:textColorHint="@color/bluey_grey_60"
                android:textFontWeight="600"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextFieldHintTypical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                app:layout_constraintStart_toStartOf="@+id/etUsername"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <com.example.livestream.commons.ui.widgets.ExtendedEditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:autofillHints="username"
                android:hint="@string/enter_a_username"
                android:inputType="text"
                android:textColorHint="@color/bluey_grey_60"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView7"
                style="@style/TextFieldHintTypical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/tlBio" />

            <TextView
                android:id="@+id/textView8"
                style="@style/TextFieldHintTypical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etEmail" />

            <TextView
                android:id="@+id/textView10"
                style="@style/TextFieldHintTypical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

            <TextView
                android:id="@+id/textView11"
                style="@style/TextFieldHintTypical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                app:layout_constraintStart_toStartOf="@+id/btnGenderSelection"
                app:layout_constraintTop_toBottomOf="@+id/etPhoneNumber" />

            <com.example.livestream.commons.ui.widgets.ExtendedEditText
                android:id="@+id/etEmail"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:autofillHints="emailAddress"
                android:drawableStart="@drawable/ic_email_24_white"
                android:drawablePadding="16dp"
                android:drawableTint="@color/bluey_grey"
                android:ellipsize="end"
                android:hint="@string/enter_your_email_address"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColorHint="@color/bluey_grey_60"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tlBio"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tlBio"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_bio_here"
                android:textColorHint="@color/bluey_grey_60"
                app:boxCornerRadiusBottomEnd="4dp"
                app:boxCornerRadiusBottomStart="4dp"
                app:boxCornerRadiusTopEnd="4dp"
                app:boxCornerRadiusTopStart="4dp"
                app:layout_constraintEnd_toEndOf="@+id/etUsername"
                app:layout_constraintStart_toStartOf="@+id/etUsername"
                app:layout_constraintTop_toBottomOf="@+id/etUsername">

                <com.example.livestream.commons.ui.widgets.ExtendedTextInputEditText
                    android:id="@+id/etBio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:maxLength="120"
                    android:maxLines="3"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.example.livestream.commons.ui.widgets.ExtendedEditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:drawableStart="@drawable/ic_phone_24_white"
                android:drawablePadding="16dp"
                android:drawableTint="@color/bluey_grey"
                android:hint="@string/enter_your_phone_number_optional"
                android:inputType="phone"
                android:maxLines="1"
                android:textColorHint="@color/bluey_grey_60"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="@+id/etEmail"
                app:layout_constraintStart_toStartOf="@+id/etEmail"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <com.example.livestream.commons.ui.widgets.ExtendedEditText
                android:id="@+id/etAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="150dp"
                android:hint="@string/enter_you_age"
                android:inputType="number"
                android:textColorHint="@color/bluey_grey_60"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnGenderSelection"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/etPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/btnGenderSelection"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableStart="@drawable/ic_gender_24"
                android:drawablePadding="8dp"
                android:drawableTint="@color/bluey_grey"
                android:ellipsize="end"
                android:focusable="false"
                android:hint="@string/select_gender"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/bluey_grey_60"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/etAge"
                app:layout_constraintEnd_toEndOf="@+id/etPhoneNumber"
                app:layout_constraintStart_toEndOf="@+id/etAge"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                tools:ignore="Autofill"
                tools:listitem="@android:layout/simple_list_item_1" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSaveProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:paddingHorizontal="40dp"
        android:paddingVertical="11dp"
        android:text="@string/save_profile"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</FrameLayout>
